# BOT_INTELIGENTE

./: .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BOT_INTELIGENTE_review.zip.sha256  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.lock.bak  requirements.txt
.github/workflows/: ci.yaml  pre-commit.yml
data/ohlcv/: XRPUSDC_15m_2025-07-15_2025-09-18.csv  XRPUSDC_15m_2025-07-15_2025-09-18_filled.csv  XRPUSDC_15m_2025-07-23_2025-07-23.csv  XRPUSDC_15m_2025-07-31_2025-07-31.csv  XRPUSDC_15m_2025-08-06_2025-08-06.csv  XRPUSDC_15m_2025-08-12_2025-08-12.csv  XRPUSDC_15m_2025-08-17_2025-08-17.csv  XRPUSDC_15m_2025-08-21_2025-08-21.csv  XRPUSDC_15m_2025-08-25_2025-08-25.csv  XRPUSDC_15m_2025-08-28_2025-08-28.csv  XRPUSDC_15m_2025-08-31_2025-08-31.csv  XRPUSDC_15m_2025-09-01_2025-09-05.corrupt.bak  XRPUSDC_15m_2025-09-01_2025-09-05.csv  XRPUSDC_15m_2025-09-02_2025-09-03.csv  XRPUSDC_15m_2025-09-05_2025-09-05.csv  XRPUSDC_15m_2025-09-06_2025-09-07.csv  XRPUSDC_15m_2025-09-08_2025-09-08.csv  XRPUSDC_15m_2025-09-10_2025-09-10.csv  XRPUSDC_15m_2025-09-11_2025-09-11.csv  XRPUSDC_15m_2025-09-12_2025-09-12.csv  XRPUSDC_15m_2025-09-13_2025-09-13.csv  XRPUSDC_15m_2025-09-14_2025-09-14.csv  XRPUSDC_15m_2025-09-15_2025-09-15.csv  XRPUSDC_15m_2025-09-15_2025-09-16.csv  XRPUSDC_15m_2025-09-16_2025-09-16.csv  XRPUSDC_15m_2025-09-17_2025-09-17.csv  XRPUSDC_15m_2025-09-17_2025-09-18.csv  XRPUSDC_15m_2025-09-18_2025-09-18.csv
scripts/: add-spdx-headers.ps1  check_spdx.py  generate_filelist.py  update-hooks.ps1
src/: main.py
src/config/: settings.py
src/data/: __init__.py  ohlcv_downloader.py
src/tools/: check_dataset.py  fetch_ohlcv_cli.py  fill_gaps.py  inspect_csv.py
src/utils/: logging.py
tests/: test_fill_gaps_grid.py  test_integrity_index.py  test_ohlc_sanity.py  test_sanity.py
