[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bot_inteligente"
version = "0.1.0"
description = "Bot de trading XRP/USDC 15m"
authors = ["Tu Nombre <tu.email@dominio>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ccxt = "4.4.59"
python-dotenv = "1.0.1"
pandas = "2.2.2"
loguru = "0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.13.1"
black = "25.9.0"
mypy = "1.11.1"
pytest = "8.3.2"
pytest-cov = "5.0.0"
pre-commit = "4.0.1"
types-python-dateutil = "*"

# --- Ajustes de herramientas ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203"]  # compatibilidad con Black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
# Mínimos que ayudan sin romper:
check_untyped_defs = true
no_implicit_optional = true
